# polypy

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements-examples.txt  requirements.txt  setup.py
docs/: docs.md  guide.md
examples/: approve_erc20.py  buy_sell.py  merge_positions_functional.py  merge_positions_managed.py  order_book_streaming.py
polypy/: __init__.py  book.py  constants.py  ctf.py  exceptions.py  orderbook.py  position.py  rest.py  reward.py  rounding.py  signing.py  stream.py  structs.py  trade.py  typing.py
polypy/book/: __init__.py  hashing.py  order_book.py  parsing.py  tick.py
polypy/ipc/: __init__.py  lock.py  shm.py
polypy/manager/: __init__.py  cache.py  order.py  position.py  rpc_ops.py  rpc_proc.py
polypy/order/: __init__.py  base.py  common.py  eip712.py  limit.py  market.py
polypy/rest/: api.py  order_proc.py  order_processing.py
polypy/rpc/: __init__.py  abi.py  api.py  encode.py  mtx_protocols.py  relay.py  tx.py
polypy/stream/: __init__.py  common.py  market.py  user.py
profiling/: time_profile_cvt_tick_size.py  time_profile_hash.py  time_profile_limit_order_creation.py  time_profile_lru_user_stream.py  time_profile_market_order_creation.py  time_profile_zeros_dec.py
scripts/fetch_tradeable_spread_info/: condition.csv  fetch_tradeable_condition_ids.py  fetch_tradeable_spread.py  market_info.csv
scripts/monitor_orderbook/: _messages_4_fed_cuts.txt  _messages_bitcoin.txt  _messages_lasconi.txt  debug_monitor_orderbook.py  messages_4_fed_cuts.csv  messages_lasconi.csv  monitor_orderbook.py
scripts/orderbook_stream/: orderbook_stream.py
scripts/record_websocket_message_hash/: record_websocket_message_hash.py
tests/: conftest.py
tests/ctf/: test_ctf.py
tests/ipc/: test_process_lock_posix.py  test_process_lock_win.py  test_shared_rlock.py  test_shm.py
tests/manager/: test_buying_power.py  test_order_manager.py  test_position_manager.py
tests/order/: test_equivalent_py_clob_client.py  test_order.py
tests/order/data/: book_data_a.txt  book_data_b.txt
tests/orderbook/: test_orderbook.py  test_shared_orderbook.py
tests/orderbook/data/: messages_hash.txt  ws_msg_book_yes.json
tests/position/: test_csm_position.py  test_position.py
tests/rest/: test_auth.py  test_order_rest.py
tests/reward/: test_reward.py
tests/reward/data/: ws_msg_book_no.json  ws_msg_market_data.json
tests/rpc/: test_aug_conv_cache.py  test_tx_post_rpc.py  test_tx_pre_rpc.py
tests/stream/: test_marketstream.py  test_orderbookstream.py  test_userstream.py
tests/stream/data/: test_order_info_maker_buy_placement.json  test_order_info_maker_buy_unmatched.json  test_order_info_maker_buy_update.json  test_server_messages.txt  test_server_multi_book.txt  test_server_multiple_last_trade_price.txt  test_server_unknown_event_type.txt  test_server_wrong_asset_id.txt  (+4 more)
